Ocultamos los botones de idioma de la páginas hasta que esté implementadas las nuevas funcionalidades para cambiar el idioma si nos lo pide el cliente

--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -33,7 +33,7 @@
           <button class="lang fw-bolder" onclick="history.back()">
             Atrás
           </button>
-          <button class="lang fw-bolder">Idioma</button>
+          <!--<button class="lang fw-bolder">Idioma</button>-->
         </div>
         <!-- contenedor de imagnes con información -->
         <div class="overflow-auto container-cards-scroll">
