--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -28,7 +28,7 @@
       <section class="container-info data-dolmen">
         <div class="container-button">
           <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
-          <button class="lang fw-bolder">Idioma</button>
+          <!--<button class="lang fw-bolder">Idioma</button>-->
         </div>
         <article class="maps-container">
           <div id="map"></div>
