--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
     <div class="flex-container">
         <section class="container-info">
             <div class="container-button">
-                <button class="lang fw-bolder">Idioma</button>
+                <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="img-fondo">
                 <img src="../media/MandubiZelaia.jpeg" alt="Dólmen Mandubi">
