--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -36,7 +36,7 @@
         <!-- botones -->
         <div class="container-button">
           <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
-          <button class="lang fw-bolder">Idioma</button>
+          <!--<button class="lang fw-bolder">Idioma</button>-->
           <button id="hidden" class="lang fw-bolder pause" value="pause" onclick="pauseAndPlay()">
               Play
             </button>
