--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -18,7 +18,7 @@
         <section class="container-info container-info-dolmenes">
             <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fw-bolder">Idioma</button>
+                <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Dólmenes de Mandubi</h1>
