--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -18,7 +18,7 @@
         <section class="container-info container-info-dolmenes">
             <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fw-bolder">Idioma</button>
+                <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="overflow-auto container-cards-scroll">
                 <h1 class="title fs-1">Dólmenes de Euskal Herria</h1>
