--- a/html/investigacion/galeria.html
+++ b/html/investigacion/galeria.html
@@ -20,7 +20,7 @@
         <section class="container-info data-dolmen">
             <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fw-bolder">Idioma</button>
+                <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="galery-container">
                 <div class="img-ampliada">
