Cambiamos el texto del botón para ir Atrás por Atzera en euskera

--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -31,7 +31,7 @@
       <section class="container-cards">
         <div class="container-button">
           <button class="lang fw-bolder" onclick="history.back()">
-            Atrás
+            Atzera
           </button>
           <!--<button class="lang fw-bolder">Idioma</button>-->
         </div>
