--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -27,7 +27,7 @@
     <div class="flex-container">
       <section class="container-info data-dolmen">
         <div class="container-button">
-          <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+          <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
           <!--<button class="lang fw-bolder">Idioma</button>-->
         </div>
         <article class="maps-container">
