--- a/html/index.html
+++ b/html/index.html
@@ -23,8 +23,8 @@
                 <img src="../media/MandubiZelaia.jpeg" alt="Dólmen Mandubi">
                 <div class="text-container">
                     <div>
-                        <h1 class="title fs-1">Dólmen Mandubi</h1>
-                        <p class="fs-5">Se ubica próximo a los dólmenes de Trikuaizti, por lo que su excavación ha permitido obtener datos de interés complementarios a los que se poseen sobre esta misma zona megalítica, que adquiere relevancia por esta concentración de monumentos.</p>
+                        <h1 class="title fs-1">Mandubi Zelaiako trikuharria</h1>
+                        <p class="fs-5">Mandubizelaian bertan jarritako panelak baliatuz, trikuharria babesteagatik ezkutuan geratu den ondarearen balioa eta eskaintzen digun ezagutza azaleratu eta ikusarazi nahi da aplikazio honekin.</p>
                     </div>
                 </div>
             </article>
