--- a/html/investigacion/img360.html
+++ b/html/investigacion/img360.html
@@ -19,7 +19,7 @@
     <div class="flex-container">
         <section class="container-img-360">
             <div class="container-button">
-                <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
             </div>
             <a-scene>
                 <a-sky   
