--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -17,7 +17,7 @@
     <div class="flex-container"> <!-- cambiar -->
         <section class="container-info container-info-dolmenes">
             <div class="container-button">
-                <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
