--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -22,36 +22,26 @@
             </div>
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Investigación de la excavación de Mandubi</h1>
-                <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
+                <ul>
+                    <li><p class="fs-6">Agirre, J.; Moraza, A.; Mujika, J. A. 2010. Los elementos físicos como reivindicación del territorio y de sus frutos en los espacios de montaña. Congreso Internacional sobre el Megalitismo y otras manifestaciones funerarias contemporáneas en su contexto social, económico y cultural (Beasain-Idiazabal, 2007). Munibe suplemento 32, 286-314, UPV/Aranzadi. Donostia-San Sebastián.</p></li>
+                    <li><p class="fs-6">Aldecoa-Otalora, E., 2011. Mandubi Zelaiko hortz aztarnen antzinako DNAren azterketa. Estudio del ADN antiguo de los restos dentales de Mandubi Zelaia. In: Mujika eta Edeso 2011 “Lehenengo nekazari-abeltzainak Gipuzkoan Neolitotik Burdin Arora. Los primeros agricultores y ganaderos en Gipuzkoa del Neolítico a la Edad del Hierro, 350-368.</p></li>
+                    <li><p class="fs-6">Edeso, J. M.; Mendizabal, M.; Mujika, J. A., 2010. Las poblaciones dolménicas y otros grupos humanos contemporáneos en el Pirineo Occidental y estrategias de gestión de los recursos de montaña. Congreso Internacional sobre el Megalitismo y otras manifestaciones funerarias contemporáneas en su contexto social, económico y cultural (Beasain-Idiazabal, 2007). Munibe suplemento 32, 368-390, UPV/Aranzadi. Donostia-San Sebastián. </p></li>
+                    <li><p class="fs-6">Fernández Eraso, J.; Mujika, J. A.; Peñalver, X., 2010. Hábitat y mundo funerario en la Prehistoria Reciente del País Vasco: nuevas evidencias.  Congreso Internacional sobre el Megalitismo y otras manifestaciones funerarias contemporáneas en su contexto social, económico y cultural. Munibe suplemento 32, 250-270, UPV/Aranzadi. Donostia-San Sebastián.</p> </li>
+                    <li><p class="fs-6">Mujika, J. A.; Armendáriz, A., 1991. La estación megalítica de Murumendi. Munibe 43, 105-165.</p></li>
+                    <li><p class="fs-6">Mujika, J. A., 1999. Mandubi-Zelaia trikuharria (Ezkio-Itxaso). Dolmen de Mandubi-Zelaia (Ezkio-Itxaso). Arkeoikuska 98, 130-132.</p></li>
+                    <li><p class="fs-6">Mujika, J. A., 2000. Mandubi-Zelaia trikuharria (Ezkio-Itxaso). Dolmen de Mandubi-Zelaia (Ezkio-Itxaso). Arkeoikuska 99, 92-94.</p></li>
+                    <li><p class="fs-6">Mujika, J. A., 2001. Mandubi-Zelaia trikuharria (Ezkio-Itxaso). Dolmen de Mandubi-Zelaia (Ezkio-Itxaso). Arkeoikuska 00, 87-90.</p></li>
+                    <li><p class="fs-6">Mujika, J. A.; Edeso, J. M., 2011. Lehenengo nekazari-abeltzainak Gipuzkoan Neolitotik Burdin Arora. Los primeros agricultores y ganaderos en Gipuzkoa del Neolítico a la Edad del Hierro. 350 orr., Gipuzkoako Foru Aldundia.</p>
+                    <li><p class="fs-6">Mujika-Alustiza, J. A., 2017. Historiaurreko itzaletik Historiaren hastapenera Gipuzkoan. Gipuzkoako historiaren Sintesia (Ed. Álvaro Aragón Ruano e Iker Echeberria Ayllon), 21-131. Gipuzkoako Foru Aldundia, Kutxa, “Miguel de Aramburu” Gipuzkoako Historialarien Elkartea.</p></li>
+                    <h6>https://migueldearanburu.files.wordpress.com/2018/06/gipuzkoako-historiaren-sintesia.pdf</h6>
+                    <h6>https://migueldearanburu.files.wordpress.com/2018/06/sc3adntesis-de-la-historia-de-gipuzkoa.pdf (wordpress.com)</h6>
+                    <li><p class="fs-6">Olalde, I.; Mallick, S.; Patterson, N.; Nadin Rohland, N.; Villalba-Mouco, V.; Silva, M.; Dulias, K., Edwards, C.J.; et alii, 2019. The genomic history of the Iberian Peninsula over the past 8000 years. Science 363, 1230-1234.</p></li>
+                <ul>
             </article>
         </section>
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Galería</p></a></li>
-                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Imágen</p></a></li>
             </ol>
         </nav>
     </div>
