Subimos todas las fotos y modificaciones que hemos realizado

--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -21,7 +21,7 @@
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="overflow-auto container-cards-scroll">
-                <h1 class="title fs-1">Dólmenes de Euskal Herria</h1>
+                <h1 class="title fs-1">Euskal Herriko trikuharriak</h1>
                 <p class="fs-5">La ruta de los dólmenes, que debe su nombre al eminente paleontólogo y etnógrafo José Miguel de
                     Barandiaran, conecta en el valle gipuzcoano de Deba, en los términos municipales de Bergara, Soraluze y
                     Elgoibar, con la historia arqueológica de Euskal Herria a través de la visita a 16 monumentos megalíticos
@@ -53,7 +53,7 @@
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="mapa-dolmenes.html"><img src="../../media/mapWhite.svg" alt="icono mapa"><p>Mapa</p><p class="sub-text">Mandubi, Trikuhazti I, Trikuhazti II eta Larrarte</p></a></li>
-                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Galería 360º</p><p class="sub-text">Una de cada uno de ellos menos Mandubi</p></a></li>
+                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>360º irudiak</p><p class="sub-text">Una de cada uno de ellos menos Mandubi</p></a></li>
             </ol>
         </nav>
     </div>
