--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -88,7 +88,7 @@
                 <model-viewer
                 class="img-carousel" data-pos="-1"
                   bounds="tight"
-                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Animatua.glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Itxita.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
@@ -118,7 +118,7 @@
                 <model-viewer
                 class="img-carousel" data-pos="2"
                   bounds="tight"
-                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Hondatua_Animatua.glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Irekia.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
@@ -131,18 +131,20 @@
         <article class="galery-info-container">
           <ol id="info">
               <li>
-                <h1 class="title fs-1">Información de interés</h1>
+                <h1 class="title fs-1">Informazioa</h1>
                 <ul class="container-text-maps">
-                  <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Nombre:</u><br>
-                    Dolmen 3</p></li>
-                  <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Ubicación:</u><br>
-                    lorem impsum lorem impsum lorem impsum</p></li>
-                  <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
-                    lorem impsum lorem impsum lorem impsum</p></li>
-                  <li><img src="" alt=""><p><u>Etc.</u></p></li>
+                  <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br>
+                    Mandubi Zelaiko Trikuharria</p></li>
+                  <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br>
+                    Mandubi Zelaiko Trikuharriaren 3D</p></li>
                 </ul>
               </li>
           </ol>
+
+          <button class="button-info" onclick="innerSee360()">
+                    <div><img src="../../media/360White.svg" alt="icon como llegar"></div>
+                    <div><p>RA</p></div>
+          </button>
       </article>
       </section>
     </div>
