--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -44,8 +44,8 @@
                   <img class="change" src="../../media/gettyimages-1267579597-2048x2048.jpg" alt="dolmen xxxxx">
                 </div>
                 <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
+                  <h3>Mandubi Zelaia</h3>
+                  <p fs-5>360º irudiak - Mandubi zelaia</p>
                 </div>
               </div>
               <div class="col-container">
@@ -54,8 +54,8 @@
                   <img class="change" src="../../media/gettyimages-685766224-2048x2048.jpg" alt="dolmen xxxxx">
                 </div>
                 <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
+                  <h3>Trikuaizti I</h3>
+                  <p fs-5>360º irudiak - Trikuaizti I</p>
                 </div>
               </div>
               <div class="col-container">
@@ -64,61 +64,10 @@
                   <img class="change" src="../../media/gettyimages-1248257041-2048x2048.jpg" alt="dolmen xxxxx">
                 </div>
                 <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
+                  <h3>Trikuaizti II</h3>
+                  <p fs-5>360º irudiak - Trikuaizti II</p>
                 </div>
               </div>
-              <div class="col-container">
-                <div class="col-container-img">
-                  <div class="col-container-360"><p>360º</p></div>
-                  <img class="change" src="../../media/gettyimages-657832689-2048x2048.jpg" alt="dolmen xxxxx">
-                </div>
-                <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
-                </div>
-              </div>
-              <div class="col-container">
-                <div class="col-container-img">
-                  <div class="col-container-360"><p>360º</p></div>
-                  <img class="change" src="../../media/gettyimages-126383899-2048x2048.jpg" alt="dolmen xxxxx">
-                </div>
-                <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
-                </div>
-              </div>
-              <div class="col-container">
-                <div class="col-container-img">
-                  <div class="col-container-360"><p>360º</p></div>
-                  <img class="change" src="../../media/gettyimages-845885088-2048x2048.jpg" alt="dolmen xxxxx">
-                </div>
-                <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
-                </div>
-              </div>
-              <div class="col-container">
-                <div class="col-container-img">
-                  <div class="col-container-360"><p>360º</p></div>
-                  <img class="change" src="../../media/gettyimages-1287571325-2048x2048.jpg" alt="dolmen xxxxx">
-                </div>
-                <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
-                </div>
-              </div>
-              <div class="col-container">
-                <div class="col-container-img">
-                  <div class="col-container-360"><p>360º</p></div>
-                  <img class="change" src="../../media/gettyimages-685766224-2048x2048.jpg" alt="dolmen xxxxx">
-                </div>
-                <div class="col-container-text">
-                  <h3>Nombre del Dólmen</h3>
-                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
-                </div>
-              </div>
-            </div>
         </div>
       </section>
     </div>
