--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -36,19 +36,18 @@
         <article class="maps-info-container">
           <button class="button-info">
             <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-            <div><p>Como llegar</p></div>
+            <div><p>Nola iritsi</p></div>
           </button>
           <ol id="info">
             <li>
-              <h1 class="title fs-1">Información de interés</h1>
+              <h1 class="title fs-1">Informazioa</h1>
               <ul class="container-text-maps">
-                <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutas:</u><br>
+                <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutak:</u><br>
                   lorem impsum lorem impsum lorem impsum</p></li>
-                <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Pueblos cercanos:</u><br>
+                <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
                   lorem impsum lorem impsum lorem impsum</p></li>
-                <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
+                <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Autobus geltokiak:</u><br> 
                   lorem impsum lorem impsum lorem impsum</p></li>
-                <li><img src="" alt=""><p><u>Etc.</u></p></li>
               </ul>
             </li>
           </ol>
