--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,6 @@
                 <div class="text-container">
                     <div>
                         <h1 class="title fs-1">Mandubi Zelaiako trikuharria</h1>
-                        <p class="fs-5">Mandubizelaian bertan jarritako panelak baliatuz, trikuharria babesteagatik ezkutuan geratu den ondarearen balioa eta eskaintzen digun ezagutza azaleratu eta ikusarazi nahi da aplikazio honekin.</p>
                     </div>
                 </div>
             </article>
@@ -40,7 +39,7 @@
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="../html/historia/historia.html"><img src="../media/historyWhite.svg" alt="icono Historia"><p>Historia</p></a></li>
                 <li class="button-nav-bar"><a href="../html/mandubi/mandubi.html"><img src="../media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubi</p></a></li>
-                <li class="button-nav-bar"><a href="../html/investigacion/investigacion.html"><img src="../media/investigationWhite.svg" alt="icono Investigación"> <p>Investigación</p></a></li>
+                <li class="button-nav-bar"><a href="../html/investigacion/investigacion.html"><img src="../media/investigationWhite.svg" alt="icono Investigación"> <p>Ikerketa</p></a></li>
             </ol>
         </nav>
     </div>
