--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -32,25 +32,16 @@
                 <div id="map"></div>
             </article>
             <article class="maps-info-container">
-                <button class="button-info">
-                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-                    <div><p>Como llegar</p></div>
-                </button>
-                <button class="button-info" onclick="innerSee360()">
-                    <div><img src="../../media/360White.svg" alt="icon como llegar"></div>
-                    <div><p>Ver Dólmen</p></div>
-                </button>
                 <ol id="info">
                   <li>
-                    <h1 class="title fs-1">Información de interés</h1>
+                    <h1 class="title fs-1">Informazioa</h1>
                     <ul class="container-text-maps">
-                      <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutas:</u><br>
+                      <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutak:</u><br>
                         lorem impsum lorem impsum lorem impsum</p></li>
-                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Pueblos cercanos:</u><br>
+                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
                         lorem impsum lorem impsum lorem impsum</p></li>
-                      <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
+                      <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Autobus geltokiak:</u><br> 
                         lorem impsum lorem impsum lorem impsum</p></li>
-                      <li><img src="" alt=""><p><u>Etc.</u></p></li>
                     </ul>
                   </li>
                 </ol>
