Agregamos la imagen de la portada provisional para mostrar al cliente. Luego deberemos hacer que sea responsive sustituyéndola por otra imagen para tablet y móvil

--- a/html/index.html
+++ b/html/index.html
@@ -20,21 +20,10 @@
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="img-fondo">
-                <img src="../media/MandubiZelaia.jpeg" alt="Dólmen Mandubi">
-                <div class="text-container">
-                    <div>
-                        <h1 class="title fs-1">Mandubi Zelaiako trikuharria</h1>
-                    </div>
-                </div>
+                <img src="../media/portada.png" width="95%" alt="Dólmen Mandubi">
             </article>
         </section>
-        <section class="container-logo">
-            <div><img src="../media/Itsaso herria - Marka.png" alt="logo1"></div>
-            <div><img src="../media/Itsaso herria - Marka.png" alt="logo2"></div>
-            <div><img src="../media/Itsaso herria - Marka.png" alt="logo3"></div>
-            <div><img src="../media/Itsaso herria - Marka.png" alt="logo4"></div>
-            <div><img src="../media/Itsaso herria - Marka.png" alt="logo5"></div> 
-        </section>
+
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="../html/historia/historia.html"><img src="../media/historyWhite.svg" alt="icono Historia"><p>Historia</p></a></li>
