Modificamos el css para cuadrar la imagen de fondo. Modificamos información de las galerías

--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -28,37 +28,35 @@
                 </div>
                 <div class="carousel">
                   <div class="container-carousel-img">
-                      <img class="img-carousel" data-pos="-8" src="../../Galeriafotos/Mandubi/01_Mandubi.jpg" alt="1">
-                      <img class="img-carousel" data-pos="-7" src="../../Galeriafotos/Mandubi/02_Mandubi.jpg" alt="2">
-                      <img class="img-carousel" data-pos="-6" src="../../Galeriafotos/Mandubi/03_Mandubi.jpg" alt="3">
-                      <img class="img-carousel" data-pos="-5" src="../../Galeriafotos/Mandubi/04_Mandubi.jpg" alt="4">
-                      <img class="img-carousel" data-pos="-4" src="../../Galeriafotos/Mandubi/05_Mandubi.jpg" alt="5">
-                      <img class="img-carousel" data-pos="-3" src="../../Galeriafotos/Mandubi/06_Mandubi.jpg" alt="6">
-                      <img class="img-carousel" data-pos="-2" src="../../Galeriafotos/Mandubi/07_Mandubi.jpg" alt="7">
-                      <img class="img-carousel" data-pos="-1" src="../../Galeriafotos/Mandubi/08_Mandubi.jpg" alt="8">
-                      <img class="img-carousel" data-pos="0" src="../../Galeriafotos/Mandubi/09_Mandubi.jpg" alt="9">
-                      <img class="img-carousel" data-pos="1" src="../../Galeriafotos/Mandubi/10_Mandubi.jpg" alt="10">
-                      <img class="img-carousel" data-pos="2" src="../../Galeriafotos/Mandubi/11_Mandubi.jpg" alt="11">
-                      <img class="img-carousel" data-pos="3" src="../../Galeriafotos/Mandubi/12_Mandubi.jpg" alt="12">
-                      <img class="img-carousel" data-pos="4" src="../../Galeriafotos/Mandubi/13_Mandubi.jpg" alt="13">
-                      <img class="img-carousel" data-pos="5" src="../../Galeriafotos/Mandubi/14_Mandubi.jpg" alt="14">
-                      <img class="img-carousel" data-pos="6" src="../../Galeriafotos/Mandubi/15_Mandubi.jpg" alt="15">
-                      <img class="img-carousel" data-pos="7" src="../../Galeriafotos/Mandubi/16_Mandubi.jpg" alt="16">
-                      <img class="img-carousel" data-pos="8" src="../../Galeriafotos/Mandubi/17_Mandubi.jpg" alt="17">                   
+                      <!--<img class="img-carousel" data-pos="-8" src="../../media/GaleriaFotos/Mandubi/01_Mandubi.jpg" alt="1">
+                      <img class="img-carousel" data-pos="-7" src="../../media/GaleriaFotos/Mandubi/02_Mandubi.jpg" alt="2">
+                      <img class="img-carousel" data-pos="-6" src="../../media/GaleriaFotos/Mandubi/03_Mandubi.jpg" alt="3">
+                      <img class="img-carousel" data-pos="-5" src="../../media/GaleriaFotos/Mandubi/04_Mandubi.jpg" alt="4">
+                      <img class="img-carousel" data-pos="-4" src="../../media/GaleriaFotos/Mandubi/05_Mandubi.jpg" alt="5">
+                      <img class="img-carousel" data-pos="-3" src="../../media/GaleriaFotos/Mandubi/06_Mandubi.jpg" alt="6">-->
+                      <img class="img-carousel" data-pos="-2" src="../../media/GaleriaFotos/Mandubi/07_Mandubi.jpg" alt="1">
+                      <img class="img-carousel" data-pos="-1" src="../../media/GaleriaFotos/Mandubi/08_Mandubi.jpg" alt="2">
+                      <img class="img-carousel" data-pos="0" src="../../media/GaleriaFotos/Mandubi/09_Mandubi.jpg" alt="3">
+                      <img class="img-carousel" data-pos="1" src="../../media/GaleriaFotos/Mandubi/10_Mandubi.jpg" alt="4">
+                      <img class="img-carousel" data-pos="2" src="../../media/GaleriaFotos/Mandubi/11_Mandubi.jpg" alt="5">
+                      <!--<img class="img-carousel" data-pos="3" src="../../media/GaleriaFotos/Mandubi/12_Mandubi.jpg" alt="12">
+                      <img class="img-carousel" data-pos="4" src="../../media/GaleriaFotos/Mandubi/13_Mandubi.jpg" alt="13">
+                      <img class="img-carousel" data-pos="5" src="../../media/GaleriaFotos/Mandubi/14_Mandubi.jpg" alt="14">
+                      <img class="img-carousel" data-pos="6" src="../../media/GaleriaFotos/Mandubi/15_Mandubi.jpg" alt="15">
+                      <img class="img-carousel" data-pos="7" src="../../media/GaleriaFotos/Mandubi/16_Mandubi.jpg" alt="16">
+                      <img class="img-carousel" data-pos="8" src="../../media/GaleriaFotos/Mandubi/17_Mandubi.jpg" alt="17"> -->                  
                   </div>
                 </div>
             </article>
             <article class="galery-info-container">
                 <ol id="info">
                     <li>
-                      <h1 class="title fs-1">Información de interés</h1>
+                      <h1 class="title fs-1">Informazioa</h1>
                       <ul class="container-text-maps">
-                        <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Nombre:</u><br>
-                            Dolmen 1</p></li>
-                          <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Ubicación:</u><br>
-                            lorem impsum lorem impsum lorem impsum</p></li>
-                          <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
-                            lorem impsum lorem impsum lorem impsum</p></li>
+                        <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br>
+                            Mandubi trikuharri</p></li>
+                          <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br>
+                            Mandubi zelaiko trikuharriaren argazkiak</p></li>
                       </ul>
                     </li>
                 </ol>
