Agregamos información a la historia

--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -21,33 +21,35 @@
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="overflow-auto container-cards-scroll">
-                <h1 class="title fs-1">Euskal Herriko trikuharriak</h1>
-                <p class="fs-5">La ruta de los dólmenes, que debe su nombre al eminente paleontólogo y etnógrafo José Miguel de
-                    Barandiaran, conecta en el valle gipuzcoano de Deba, en los términos municipales de Bergara, Soraluze y
-                    Elgoibar, con la historia arqueológica de Euskal Herria a través de la visita a 16 monumentos megalíticos
-                    de la estación de Elosua-Plazentzia.
-                    No hace falta mucho tiempo para recorrer esta ruta de monumentos funerarios, de desnivel escaso y
-                    que, además, ofrece unas vistas inigualables entre los valles del Urola y Deba. Las panorámicas, en
-                    cualquiera de las direcciones, son espectaculares, ya que a un lado nos encontramos con el abrazo del
-                    Cantábrico y al otro, cumbres como Aralar, Aizkorri, Anboto o Gorbeia. En días despejados se pueden
-                    divisar hasta las Peñas de Aia y las estribaciones pirenaicas.
-                    La ruta de los dólmenes, denominada PR-Gi 94, comprende un recorrido de 20 kilómetros a través de la
-                    divisoria de Karakate-Agirreburu y une las localidades de Elgoibar, Soraluze y Bergara. Es un sendero de
-                    gran valor natural y cultural, en el que se pueden contemplar vestigios de nuestros antepasados,
-                    dólmenes (enterramientos colectivos con losas verticales) y túmulos (sin cámara dolménica, solo con
-                    piedras amontonadas) que conforman la estación megalítica de Elosua-Plazentzia.
-                    El paseante se encontrará con una importante concentración de dólmenes y túmulos, monumentos
-                    relacionados con los rituales funerarios de la cultura ancestral de los pastores. Hasta un total de 16
-                    monumentos (10 túmulos y seis dólmenes), algunos de los cuales fueron expoliados tras ser
-                    descubiertos por Barandiaran. Son los dólmenes de Agerreburu, Aitzpuruko Zabala, Atxolin, Iruiya,
-                    Irukurutzeta y Keixetako Egiya Sur; y los túmulos de Aizkoin, Atxolin Txiki, Keixeta, Keixetako Egiya
-                    Norte, Kutzebakaar, Maurketa, Naasiko Goena, Pagobedeinkatu, Trekutz y Gizaburua.
-                    La ruta se encuentra conectada con los núcleos urbanos de Elgoibar, Bergara y Soraluze, y está
-                    señalizada y balizada. Los tres ayuntamientos citados, junto a la Sociedad de Ciencias Aranzadi, la
-                    Diputación del herrialde y el Gobierno vasco han participado en la adecuación e interpretación de esta
-                    ruta porque “el sendero y su entorno contienen recursos tangibles e intangibles con un importante
-                    potencial turístico, en particular en el ámbito rural”, destacan desde las instituciones. En los tres pueblos
-                    y Debabarrena Turismo ofrecen información y folletos sobre la ruta. </p>
+                <h1 class="title fs-1">Trikuharriak Euskal Herrian</h1>
+                <p class="fs-5">Hurrengo testuetan, Euskal Herrian izan diren Trikuharrien informazio orokorra eta hauen azalpena emango da.</p>
+
+                <br>
+                <h3>Neolitoaren hasiera Euskal Herrian</h3>
+                <p class="fs-5"><img src="../../media/Historia/Neolito.png" alt="proceso" width="90%"></p>
+
+                <br>
+                <h3>Trikuharriaren kronologia</h3>
+                <p class="fs-5"><img src="../../media/Historia/Kronologia.png" alt="proceso" width="90%"></p>
+
+                <br>
+                <h3>Egitura hauen aniztasuna</h3>
+                <p class="fs-5"><img src="../../media//Historia/Egitura1.png" alt="proceso" width="90%"></p><br>
+                <p class="fs-5"><img src="../../media//Historia/Egitura1.png" alt="proceso" width="90%"></p>
+
+                <br>
+                <h3>Diseinua eta lanaren antolaketa</h3>
+                <p class="fs-5">Trikuaizti eta Mandubizelaiko hilobi-arkitekturak eraikitzeko inguruan (Kalteralde, Kizkitza) azaleratzen ziren basaltoak erabili ziren. Tumulua ia bakarrik harri-mota honekin egin zen, baina horrek formatu/forma egokiko harlauzak ez dituenez eskaintzen, ganberako zorua prestatzeko eta harlauzetarako kareharri tupatsuak eta arbela erabili zituzten.</p>
+                <p class="fs-5">Harrobi gisa erabilitako leku zehatzak ez ditugu ezagutzen, baina oso urruti joan gabe egongo dira. Harri-koskor batzuk erraz eskuragarri izango zituzten, baina ez nahikoak egitura egiteko eta geruzetatik ere atera beharko zituzten harrizko, zurezko eta hezurrezko pikotxekin, aspaldidanik muger edo suharri-meategietan (Mugarduia -Urbasa-, Mugerre -Lapurdi-, Araiko -Trebiñu-, etab.) egiten zuten bezala. Ondoren, ziur aski, harriak animalien laguntzaz mugitutako lera gisako ibilgailuetan garraiatuko zituzten.</p>
+                <!--<img src="../../media/Historia/Trikuharriak.png" alt="proceso" width="30%">-->
+                <p class="fs-5">Hilobi-arkitekturaren kokalekua hainbat irizpide jarraituz aukeratuko zuten, eta seguruenik, beste munduarekiko sinesmen ezezagunek ziotena, eta baita helburu praktiko (lana aurreztea, etab.) eta ekonomikoetan (kudeatzen zituzten eremuaren zuin gisa gainontzeko taldeek identifikatu zezaten) oinarrituta ere. Honetarako ikuseremu handiko tokiak aukeratzen zituzten eta era berean ikusgaitasuna paisaian nabarmentzen (tumulu handiak eta nabarmenak eginaz) saiatzen ziren.</p>
+                <p class="fs-5">Eraikuntza lanak auzolanean egingo ziren, elkarlanean, ez zen izango abeltzainen bat-bateko inprobisazioa. Denbora luzez iraungo zuten hilobi-arkitekturak hauek eraikitzeko tradizioz ikasitako jakindurian oinarrituko ziren. Gerta daiteke, pertsona gailen, ospetsu bat, eraikuntza egiteko egotea eta egingo ziren ospakizun eta errituen ardura ere edukitzea.</p>
+                <p class="fs-5">Sarritan, bertan hazten zen landaretzari su emanaz hasiera ematen zioten lanari. Ondoren, bertara inguratuta eta euren ezaugarrien arabera (harlauza edo harri-koskor; neurriak) multzoetan sailkatutako harriak erabiliko zituzten. Lehen urratsa ganberaren burualdeko harlauza jartzea izango zen eta bere arrimuan, ukituz, batzuetan alboko harlauza handiak lur-erreten edo zangetan sartuz tinkatuta gel zitezen.</p>  
+                <p class="fs-5">Ganberako harlauzetatik kanporantz harri handi xamarrak teilakatuz bezala jartzen ziren egitura sendotzeko, eta hauen gainean beste batzuk txikiagoak ia ganberaren estalkia estali arte. Hauen gainean jarritakoak txikiagoak dira eta ez daude hain ondo ipinita. Harri-metaketa honi tumulu edo armorkora deitu ohi zaio. Gainera, batzuetan, kanpo aldetik tumulua inguratuz, sendotuz eta mugatuz harriak zutika jarrita izaten zituzten, harri-zirkulu edo harrespil itxura hartuz.</p>
+
+                <a href="https://www.itsaso.eus/es/dolmen-mandubizelaia"><button class="lang fw-bolder">+ info</button></a>
+
+                 
             </article>
         </section>
         <nav class="nav-bar">
