--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -71,60 +71,63 @@
                 />
               </div>
             </model-viewer>
+            <iframe 
+              class="sketchfab"
+              title="MandubikoTrikuharri" 
+              frameborder="0" 
+              allowfullscreen mozallowfullscreen="true" 
+              webkitallowfullscreen="true" 
+              allow="autoplay; fullscreen; xr-spatial-tracking" 
+              xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/f403450519b947aba3fcbe35aa0d70b4/embed"> 
+            </iframe>
           </div>
           <!-- Selector de imágenes -->
           <div class="carousel">
-            <div class="container-carousel-img">
+            <div class="container-carousel-img vr">
                 <model-viewer
-                class="img-carousel" data-pos="-2"
+                class="img-carousel vr" data-pos="-2"
                   bounds="tight"
                   src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Irekia.glb"
                   ar
-                  ar-modes="webxr scene-viewer quick-look"
-                  environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
                 <model-viewer
-                class="img-carousel" data-pos="-1"
+                class="img-carousel vr" data-pos="-1"
                   bounds="tight"
                   src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Itxita.glb"
                   ar
-                  ar-modes="webxr scene-viewer quick-look"
-                  environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
                 <model-viewer
-                class="img-carousel" data-pos="0"
+                class="img-carousel vr" data-pos="0"
                   bounds="tight"
                   src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Hondatua.glb"
                   ar
-                  ar-modes="webxr scene-viewer quick-look"
-                  environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
                 <model-viewer
-                class="img-carousel" data-pos="1"
+                class="img-carousel vr" data-pos="1"
                   bounds="tight"
                   src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Itxita.glb"
                   ar
-                  ar-modes="webxr scene-viewer quick-look"
-                  environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
                 <model-viewer
-                class="img-carousel" data-pos="2"
+                class="img-carousel vr" data-pos="2"
                   bounds="tight"
                   src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Irekia.glb"
                   ar
-                  ar-modes="webxr scene-viewer quick-look"
-                  environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
+                <model-viewer
+                  class="img-carousel vr" data-pos="2"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Itxita - copia.glb"> 
+                </model-viewer>
             </div>
           </div>
         </article>
