--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -27,25 +27,27 @@
                   <img id="imgGalery" src="../../media/gettyimages-927938320-2048x2048.jpg" alt="" />
                 </div>
                 <div class="carousel">
+                  <button class="button-carousel" type="button" onclick="moveImg()"><img src="../../media/arrowLeftBlue.svg" alt="icono flecha"> </button>
                   <div class="container-carousel-img">
-                      <img class="img-carousel" data-pos="-8" src="../../Galeriafotos/Mandubi/01_Mandubi.jpg" alt="1">
-                      <img class="img-carousel" data-pos="-7" src="../../Galeriafotos/Mandubi/02_Mandubi.jpg" alt="2">
-                      <img class="img-carousel" data-pos="-6" src="../../Galeriafotos/Mandubi/03_Mandubi.jpg" alt="3">
-                      <img class="img-carousel" data-pos="-5" src="../../Galeriafotos/Mandubi/04_Mandubi.jpg" alt="4">
-                      <img class="img-carousel" data-pos="-4" src="../../Galeriafotos/Mandubi/05_Mandubi.jpg" alt="5">
-                      <img class="img-carousel" data-pos="-3" src="../../Galeriafotos/Mandubi/06_Mandubi.jpg" alt="6">
-                      <img class="img-carousel" data-pos="-2" src="../../Galeriafotos/Mandubi/07_Mandubi.jpg" alt="7">
-                      <img class="img-carousel" data-pos="-1" src="../../Galeriafotos/Mandubi/08_Mandubi.jpg" alt="8">
-                      <img class="img-carousel" data-pos="0" src="../../Galeriafotos/Mandubi/09_Mandubi.jpg" alt="9">
-                      <img class="img-carousel" data-pos="1" src="../../Galeriafotos/Mandubi/10_Mandubi.jpg" alt="10">
-                      <img class="img-carousel" data-pos="2" src="../../Galeriafotos/Mandubi/11_Mandubi.jpg" alt="11">
-                      <img class="img-carousel" data-pos="3" src="../../Galeriafotos/Mandubi/12_Mandubi.jpg" alt="12">
-                      <img class="img-carousel" data-pos="4" src="../../Galeriafotos/Mandubi/13_Mandubi.jpg" alt="13">
-                      <img class="img-carousel" data-pos="5" src="../../Galeriafotos/Mandubi/14_Mandubi.jpg" alt="14">
-                      <img class="img-carousel" data-pos="6" src="../../Galeriafotos/Mandubi/15_Mandubi.jpg" alt="15">
-                      <img class="img-carousel" data-pos="7" src="../../Galeriafotos/Mandubi/16_Mandubi.jpg" alt="16">
-                      <img class="img-carousel" data-pos="8" src="../../Galeriafotos/Mandubi/17_Mandubi.jpg" alt="17">                   
+                    <div><img class="img-carousel" data-pos="-8" src="../../media/Galeriafotos/Mandubi/01_Mandubi.jpg" alt="1"></div>
+                    <div><img class="img-carousel" data-pos="-7" src="../../media/Galeriafotos/Mandubi/02_Mandubi.jpg" alt="2"></div>
+                    <div><img class="img-carousel" data-pos="-6" src="../../media/Galeriafotos/Mandubi/03_Mandubi.jpg" alt="3"></div>
+                    <div><img class="img-carousel" data-pos="-5" src="../../media/Galeriafotos/Mandubi/04_Mandubi.jpg" alt="4"></div>
+                    <div><img class="img-carousel" data-pos="-4" src="../../media/Galeriafotos/Mandubi/05_Mandubi.jpg" alt="5"></div>
+                    <div><img class="img-carousel" data-pos="-3" src="../../media/Galeriafotos/Mandubi/06_Mandubi.jpg" alt="6"></div>
+                    <div><img class="img-carousel" data-pos="-2" src="../../media/Galeriafotos/Mandubi/07_Mandubi.jpg" alt="7"></div>
+                    <div><img class="img-carousel" data-pos="-1" src="../../media/Galeriafotos/Mandubi/08_Mandubi.jpg" alt="8"></div>
+                    <div><img class="img-carousel" data-pos="0" src="../../media/Galeriafotos/Mandubi/09_Mandubi.jpg" alt="9"></div>
+                    <div><img class="img-carousel" data-pos="1" src="../../media/Galeriafotos/Mandubi/10_Mandubi.jpg" alt="10"></div>
+                    <div><img class="img-carousel" data-pos="2" src="../../media/Galeriafotos/Mandubi/11_Mandubi.jpg" alt="11"></div>
+                    <div><img class="img-carousel" data-pos="3" src="../../media/Galeriafotos/Mandubi/12_Mandubi.jpg" alt="12"></div>
+                    <div><img class="img-carousel" data-pos="4" src="../../media/Galeriafotos/Mandubi/13_Mandubi.jpg" alt="13"></div>
+                    <div><img class="img-carousel" data-pos="5" src="../../media/Galeriafotos/Mandubi/14_Mandubi.jpg" alt="14"></div>
+                    <div><img class="img-carousel" data-pos="6" src="../../media/Galeriafotos/Mandubi/15_Mandubi.jpg" alt="15"></div>
+                    <div><img class="img-carousel" data-pos="7" src="../../media/Galeriafotos/Mandubi/16_Mandubi.jpg" alt="16"></div>
+                    <div><img class="img-carousel" data-pos="8" src="../../media/Galeriafotos/Mandubi/17_Mandubi.jpg" alt="17"></div>                  
                   </div>
+                  <button class="button-carousel" type="button" onclick="moveImg()"><img src="../../media/arrowRightBlue.svg" alt="icono flecha"></button>
                 </div>
             </article>
             <article class="galery-info-container">
