Modificamos la URL de los botones +info y lo redirigimos a la web en euskera

--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -47,7 +47,7 @@
                 <p class="fs-5">Sarritan, bertan hazten zen landaretzari su emanaz hasiera ematen zioten lanari. Ondoren, bertara inguratuta eta euren ezaugarrien arabera (harlauza edo harri-koskor; neurriak) multzoetan sailkatutako harriak erabiliko zituzten. Lehen urratsa ganberaren burualdeko harlauza jartzea izango zen eta bere arrimuan, ukituz, batzuetan alboko harlauza handiak lur-erreten edo zangetan sartuz tinkatuta gel zitezen.</p>  
                 <p class="fs-5">Ganberako harlauzetatik kanporantz harri handi xamarrak teilakatuz bezala jartzen ziren egitura sendotzeko, eta hauen gainean beste batzuk txikiagoak ia ganberaren estalkia estali arte. Hauen gainean jarritakoak txikiagoak dira eta ez daude hain ondo ipinita. Harri-metaketa honi tumulu edo armorkora deitu ohi zaio. Gainera, batzuetan, kanpo aldetik tumulua inguratuz, sendotuz eta mugatuz harriak zutika jarrita izaten zituzten, harri-zirkulu edo harrespil itxura hartuz.</p>
 
-                <a href="https://www.itsaso.eus/es/dolmen-mandubizelaia"><button class="lang fw-bolder">+ info</button></a>
+                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
                  
             </article>
