--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -76,7 +76,7 @@
                     <li><a href="https://www.euskadi.eus/app/ondarea/arkeologia-ondarea/murumendiko-estazio-megalitikoa/beasain/beizama/bidania-goiatz/ezkio-itsaso/fichaconsulta/100306">https://www.euskadi.eus/app/ondarea/arkeologia-ondarea/murumendiko-estazio-megalitikoa/beasain/beizama/bidania-goiatz/ezkio-itsaso/fichaconsulta/100306</a></li>
                 </ul>
 
-                <a href="https://www.itsaso.eus/es/dolmen-mandubizelaia"><button class="lang fw-bolder">+ info</button></a>
+                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
             </article>
         </section>
