--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -39,7 +39,7 @@ Abeltzain-talde horien osaketa ez zen herriskakoaren berdina, badirudi ugariagoa
                 <p class="fs-5">Tumuluak 17 m-ko diametroa eta 0,40 m-ko altuera ditu, baina ekialdean badirudi altuera handiagoa duela, gune zabal baten muturrean eta aldapa bizkortzen hasten den tokian eraikita dagoelako. Erdialdean, gutxi-gorabehera, Ekialdetik Mendebalderanzko norantza duen trapezio-formako ganbera kokatzen da, 1,80 m luze dena, nahiz eta ganberaren alde baterako 3 m luze zen harlauza bat aukeratu. Zabalera, buru aldean, 1,14 m da eta beste muturrean, ekialdean, 0,80 m ditu.
                 Lehenengo gorpuak ganberaren zorua ia osorik estaltzen zuen arbelezko/tupazko harlauza baten gainean ipini ziren.</p>
 
-                <a href="https://www.itsaso.eus/es/dolmen-mandubizelaia"><button class="lang fw-bolder">+ info</button></a>
+                <a href="https://www.itsaso.eus/es/dolmen-mandubizelaia" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
 
             </article>
