--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -38,19 +38,17 @@
             <li>
               <h1 class="title fs-1">Informazioa</h1>
               <ul class="container-text-maps">
-                <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutak:</u><br>
-                  lorem impsum lorem impsum lorem impsum</p></li>
                 <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
-                  lorem impsum lorem impsum lorem impsum</p></li>
-                <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Autobus geltokiak:</u><br> 
+                  Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta</p></li>
+                <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Aparkalekua:</u><br> 
                   lorem impsum lorem impsum lorem impsum</p></li>
               </ul>
             </li>
           </ol>
-          <button class="button-info">
-            <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-            <div><p>Nola iritsi</p></div>
-          </button>
+            <button class="button-info" onclick=" window.open('https://goo.gl/maps/9xtdw3nFYw3jEKTt6','_blank')">
+                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
+                    <div><p>Nola iritsi</p></div>
+            </button>
         </article>
       </section>
     </div>
