Agregamos información al mapa del Dolmen

--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -39,9 +39,9 @@
               <h1 class="title fs-1">Informazioa</h1>
               <ul class="container-text-maps">
                 <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
-                  Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta</p></li>
+                  Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta, Zumarraga, Urretxu</p></li>
                 <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Aparkalekua:</u><br> 
-                  lorem impsum lorem impsum lorem impsum</p></li>
+                  Mandubizelaira iristeko aparkalekua.</p></li>
               </ul>
             </li>
           </ol>
